Implement new status page
The current status page shows a lot of information about the different
pipelines, queues and even the individual queue items and their jobs.
This information can become quite overwhelming - especially for larger
tenants with a lot of pipelines and longer (gate) queues.

For operators, this makes it hard to get a clear picture of what's going
on and for the individual developers it's hard to find their individual
changes (or queues).

The new status page tries to provide a more "operator-oriented" view by
showing the most imporant information about a tenant in a very concised
manner. The idea is to focus only on the relevant information to get an
answer to the following questions:

  1. What is the current state of the tenant?
  2. Which items are failing?
  3. Which pipelines/queues are succeeding (or failing)?
  4. Which queues are piling up items?

To achieve this, the new status page focuses on higher-level information
like pipelines and queues, but doesn't show more detailed ones like the
individual queue items and their jobs. Also, the queues are much more
prominent in this new status view.

To compensate the missing information, the next change implements an
additional "pipeline details view".

The general idea behind this rework is to provide both a
"operator-oriented" view and a "developer-oriented" view without mixing
both into a single view (which is kind of what the current status view
tries to do). Instead of showing all information on a single page, the
new approach splits that information into different scopes:

  1. status / pipeline overview
  2. pipeline and queue details
  3. individual change

Based on those scopes, the pages that handle those focus only on the
relevant information, but don't show too many details about the other
scopes. The changes in this stack currently cover 1. and 2., whereby 3.
is already existing in form of the "single change panel/view".

The change doesn't touch the current StatusPage, but create

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -182,6 +182,58 @@ a.refresh {
 }
 
 /* Status page */
+
+/* Use the same hover effect like for selectable cards, but without
+   actually selecting them */
+.zuul-pipeline-summary:hover {
+    box-shadow: var(--pf-c-card--m-selectable--active--BoxShadow);
+    cursor: default;
+}
+
+/* Override PF4 padding values on compact cards to make them even more
+   compact. */
+.pf-c-card.zuul-compact-card .pf-c-card__header {
+    padding: 8px 16px 0 16px;
+}
+
+.pf-c-card.zuul-compact-card .pf-c-card__title {
+    padding: 16px 16px 0 16px;
+}
+
+.pf-c-card.zuul-compact-card .pf-c-card__body {
+    padding: 0 16px 16px 16px;
+}
+
+/* TODO (felix): Could we put every title within a compact header and
+   remove this css rule? */
+.pf-c-card.zuul-compact-card .pf-c-card__header .pf-c-card__title {
+    padding: 0;
+    padding-bottom: 8px;
+}
+
+.zuul-item-square {
+    /* We make this clickable in a follow-up change */
+    cursor: default;
+    opacity: 0.7;
+    padding: 0 !important;
+}
+
+.zuul-item-square-success {
+    color: var(--pf-global--success-color--100) !important;
+}
+.zuul-item-square-danger {
+    color: var(--pf-global--danger-color--100) !important;
+}
+.zuul-item-square-info {
+    color: var(--pf-global--info-color--100) !important;
+}
+.zuul-item-square-warning {
+    color: var(--pf-global--warning-color--100) !important;
+}
+.zuul-item-square-pending {
+    color: var(--pf-global--palette--black-500) !important;
+}
+
 .zuul-pipeline-header h3 {
     font-weight: var(--pf-global--FontWeight--bold);
 }
@@ -524,6 +576,9 @@ details.foldable[open] summary::before {
     background: var(--pf-global--palette--red-50);
 }
 
+/*
+ * Dark Mode overrides
+ */
 .pf-theme-dark .pf-c-nav__link {
   color: #fff !important;
 }
@@ -561,4 +616,24 @@ details.foldable[open] summary::before {
 
 .pf-theme-dark .pf-c-empty-state {
     color: #fff !important;
+}
+
+.pf-theme-dark .zuul-item-square-success {
+    color: var(--pf-global--palette--green-300) !important;
+}
+
+.pf-theme-dark .zuul-item-square-success svg:hover {
+    color: var(--pf-global--palette--green-500) !important;
+}
+
+.pf-theme-dark .zuul-item-square-danger svg:hover {
+    color: var(--pf-global--palette--red-200) !important;
+}
+
+.pf-theme-dark .zuul-item-square-pending {
+    color: var(--pf-global--palette--black-400) !important
+}
+
+.pf-theme-dark .zuul-item-square-pending svg:hover {
+    color: var(--pf-global--palette--black-500) !important;
 }
