--- a/web/src/index.css
+++ b/web/src/index.css
@@ -212,6 +212,7 @@ a.refresh {
 }
 
 .zuul-item-square {
+    cursor: pointer;
     opacity: 0.7;
     padding: 0 !important;
 }
@@ -277,9 +278,14 @@ a.refresh {
     padding: 4px;
 }
 
-.zuul-change-total-result {
+/* Backwards-compatibility for progress bar on Change/Item panel */
+.zuul-status-content .zuul-change-total-result {
     height: 10px;
     width: 180px;
+}
+
+.zuul-change-total-result {
+    width: 100%;
     margin: 0;
     display: inline-block;
     vertical-align: middle;
