Align QueueItem and QueueItemPopover
This aligns the layout and styling for the common parts of the QueueItem
and QueueItemPopover. Where possible those parts are also moved to a
common file, so they are only defined once.

Change-Id: I5300b846d6fe998e16bbbc891c0c1204fa0015f0

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -191,6 +191,15 @@ a.refresh {
     cursor: default;
 }
 
+.pf-c-popover.zuul-queue-item-popover .pf-c-popover__content h6 {
+    margin-bottom: 0;
+    margin-top: 5px;
+}
+
+.pf-c-popover.zuul-queue-item-popover .pf-c-popover__footer {
+    margin-top: 8px;
+}
+
 /* Override PF4 padding values on compact cards to make them even more
    compact. */
 .pf-c-card.zuul-compact-card .pf-c-card__header {
