--- a/web/src/index.css
+++ b/web/src/index.css
@@ -354,6 +354,28 @@ a.refresh {
     animation: progress-bar-stripes 1s linear infinite;
 }
 
+.pf-c-progress-stepper.zuul-queue-branch {
+    margin-top: 20px;
+}
+
+.zuul-branch-wrapper::before {
+    content: "";
+    position: absolute;
+    border-bottom: var(--pf-c-progress-stepper__step-connector--before--BorderRightWidth) solid var(--pf-c-progress-stepper__step-connector--before--BorderRightColor);
+    left: 15px;
+    height: 14px;
+    width: 40px;
+}
+/*.pf-c-progress-stepper.zuul-queue-branch > .pf-c-progress-stepper__step:first-of-type > .pf-c-progress-stepper__step-connector::before {
+    content: "";
+    position: absolute;
+    border-bottom: var(--pf-c-progress-stepper__step-connector--before--BorderRightWidth) solid var(--pf-c-progress-stepper__step-connector--before--BorderRightColor);
+    left: -18px;
+    top: 13px;
+    height: 0;
+    width: 40px;
+}*/
+
 .zuul-pipeline-header h3 {
     font-weight: var(--pf-global--FontWeight--bold);
 }
