WIP: demo compressed non-live items
In review comments we have discussed the presentation of non-live
items in independent pipelines in the overview page.  These are
currently rendered as grey squares, and a skilled user can read
the tile field in an independent pipeline as follows: a series of X
grey squares preceding a non-grey square indicates the non-grey
square depends on a series of X changes.

However, grey is also used elsewhere to mean "this live queue item
has not started yet"; that could make things a little confusing.

The useful pieces of information are:
* How many dependencies the change has (operators want to know how
  much extra work is being done to test each change).
* What actual changes are being tested with a change (users want to
  see what's being tested with their change).

Inasmuch as the current overview page allows users to hover or click
on a tile, that satisfies the second condition (though with some extra
effort to hover/click on each in order to identify the change).
Arguably, the pipeline detail view is a better way to do that since
all dependent queue items can be seen at once.

If we sacrifice (somewhat) the ability to hover over the non-live
changes, we can present the information in item #1 (how many dependent
changes are included) in an easier to read manner by rendering the
non-live changes as small vertical bars.  We wouldn't expect users to
actually count the bars (though they could), but rather they can see
at a glance: here is a change with no dependencies; here is a change
with one or a small number; and here is a change with way too many
dependencies -- perhaps that one should be investigated.

One way to look at independent pipelines is that they are
two-dimensional. This can easily be seen on the pipeline detail view,
where the width is the number of live items, and the height of each
is the number of changes in them.  This brings an aspect of that
two-dimensionality to the overview page.

(Note: another way to do this

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -277,10 +277,12 @@ a.refresh {
 }
 .zuul-item-square-pending {
     color: var(--pf-global--palette--black-500) !important;
+    width: 2px;
 }
 .zuul-item-square-pending svg:hover {
     opacity: 1;
     color: var(--pf-global--palette--black-700) !important;
+    width: 2px;
 }
 
 .zuul-change-queue .pf-c-progress-stepper__step-main {
