Make QueueItem cards in ChangeQueue more concise
This is a follow-up on change 923778[1] where we try to integrate the
ChangeQueue from the PipelineDetails view into the Status view via an
expandable section.

This change removes some of the paddings used within the custom
zuul-compact-card or makes them smaller. Additionally, use a larger
font-size for the pipeline name, so it better stands out from the queue
names.

Additional changes are made to the style of the progress stepper to make
the icons smaller and to better align the progress stepper icons with
the content (QueueItem cards).

Finally, the AngleRight and AngleDown icons (to open/close the
expandable section) are aligned with the queue names and get a
cursor:pointer on hover to visualize that they are clickable.

Originally, I wanted to apply this change only to the ChangeQueue as
visualized on the Status view, but maybe we can keep it also for the
PipelineDetails view (currently it's applied to both).

[1]: https://review.opendev.org/c/zuul/zuul/+/923778

Change-Id: I17eb8203da78aa80116ebd95679e06b05fc0e434

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -195,6 +195,15 @@ a.refresh {
     cursor: default;
 }
 
+.zuul-expand-icon {
+    margin-left: 4px;
+    vertical-align: -0.2em;
+}
+
+.zuul-expand-icon:hover {
+    cursor: pointer;
+}
+
 .pf-c-popover.zuul-queue-item-popover .pf-c-popover__content h6 {
     margin-bottom: 0;
     margin-top: 5px;
@@ -239,6 +248,7 @@ a.refresh {
 
 .zuul-pipeline-link {
     color: #363636;
+    font-size: var(--pf-global--FontSize--xl);
 }
 
 .zuul-item-square {
@@ -283,8 +293,37 @@ a.refresh {
     color: var(--pf-global--palette--black-700) !important;
 }
 
+/* Make the cards within a zuul-change-queue even more compact */
 .zuul-change-queue .pf-c-progress-stepper__step-main {
     margin-bottom: 20px;
+    margin-top: 0;
+}
+
+.zuul-change-queue .pf-c-progress-stepper__step-icon {
+    font-size: 0.9rem;
+    --pf-c-progress-stepper__step-icon--Width: 1.5rem;
+    --pf-c-progress-stepper__step-icon--Height: 1.5rem;
+}
+
+.zuul-change-queue .pf-c-card.zuul-compact-card .pf-c-card__header {
+    padding: 8px 8px 0 8px;
+}
+
+.zuul-change-queue .pf-c-card.zuul-compact-card .pf-c-card__body {
+    padding: 0 8px 8px 8px;
+}
+
+.zuul-change-queue .pf-c-card.zuul-compact-card .pf-c-expandable-section__toggle {
+    padding-bottom: 0;
+}
+
+.zuul-change-queue .pf-c-card.zuul-compact-card .zuul-change-link {
+    padding-right: 2px;
+    padding-bottom: 0;
+}
+
+.zuul-pipeline-summary .zuul-change-queue {
+    padding-top: 4px;
 }
 
 .zuul-job-list.pf-c-data-list .pf-c-data-list__item-content {
