Expand queue items to the full width of column
On the status page, expand the queue items so they are always the
same width.  This makes scanning down (or even across) easier.

Change-Id: Ie2cca669d418cd3ad6e299c17ee1d5d8275f196e

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -324,6 +324,7 @@ a.refresh {
 
 .zuul-pipeline-summary .zuul-change-queue {
     padding-top: 4px;
+    width: 100%;
 }
 
 .zuul-job-list.pf-c-data-list .pf-c-data-list__item-content {
