Add a switch to expand all jobs in PipelineDetails
This adds a "Show all jobs" switch to the pipeline details page that
toggles the expandable jobs pane on all queue items at once.

This implements the functionality of the "Expand by default" toggle that
exists on the current status page.

Change-Id: Id1de863f921914ae23d0aeb48bfc9d931a1bf0a0

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -183,7 +183,7 @@ a.refresh {
 
 /* Status page */
 
-.zuul-show-pipeline-switch {
+.zuul-show-all-switch {
     padding-left: var(--pf-global--spacer--sm);
 }
 
