Add share icon to QueueItem actions
On the new status page we don't have a link to the "Single Change Panel"
anymore as it doesn't provide more details compared to what's already
shown on the status page.

As one might still find it useful to be able to share the link to a
single change with someone, add a share icon to the QueueItem's actions.

If the admin actions are also visible, the share icon will shift to the
left.

Change-Id: Ic80954289822119388cca7e50b88651f95e9fc8e

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -231,6 +231,25 @@ a.refresh {
     padding: 0 16px 16px 16px;
 }
 
+.pf-c-card.zuul-compact-card .pf-c-card__actions {
+    margin-right: 0;
+}
+
+.pf-c-card.zuul-compact-card .pf-c-card__actions > * + * {
+    margin-left: 0;
+}
+
+.pf-c-card.zuul-compact-card .pf-c-card__actions .zuul-share-link {
+    padding: 0;
+    width: 28px;
+    height: 36px;
+}
+
+.pf-c-card.zuul-compact-card .pf-c-card__actions .zuul-admin-dropdown {
+    margin-right: 4px;
+    width: 28px;
+}
+
 /* TODO (felix): Could we put every title within a compact header and
    remove this css rule? */
 .pf-c-card.zuul-compact-card .pf-c-card__header .pf-c-card__title {
